fix package + prenotazione con command, DAO e strategy